# SteamFlipper

./: .env.example  .gitignore  .tmuxinator.yaml  README.md  flake.nix
backend/: main.py  pyproject.toml
backend/core/: models.py
backend/db/: steamflipper.db  steamflipper.db-shm  steamflipper.db-wal
backend/src/: main.py  pyproject.toml
backend/src/app/: main.py  schemas.py
backend/src/app/api/: opportunities.py  watchlist.py
backend/src/config/: env.py  watchlist.yaml
backend/src/core/: env.py  models.py  utils.py  watchlist.py
backend/src/db/: database.py
backend/src/logs/: logging.py
backend/src/notifier/: telegram.py
backend/src/scraper/: steam_market.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: index.html  pnpm-lock.yaml
frontend/src/api/: opportunities.ts
frontend/src/components/: SortableTh.vue
frontend/src/src/: main.ts  style.css
frontend/src/src/api/: opportunities.ts  watchlist.ts
frontend/src/src/components/: AddWatchlist.vue  SortableTh.vue
frontend/src/src/router/: index.ts
frontend/src/src/views/: OpportunitiesView.vue
frontend/src/views/: OpportunitiesView.vue
modules/: devenv.nix
src/: config.py  main.py  pyproject.toml
src/app/: main.py  schemas.py
src/app/api/: opportunities.py
src/config/: env.py  watchlist.yaml
src/core/: models.py  risks.py  utils.py  watchlist.py
src/db/: database.py
src/logs/: logging.py
src/notifier/: telegram.py
src/rules/: near_profit.py  profit.py
src/scraper/: steam_market.py
src/strategy/: profit.py
