[project]
name = "automarket"
version = "0.1.0"
description = "A Python service that periodically checks Steam Market prices and notifies on good deals"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]
