[project]
name = "steamflipper"
version = "0.3.5"
description = "A Python service that periodically checks Steam Market prices and notifies on good deals"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "uvicorn>=0.40.0",
]
